# erkg-tutorials

./: .flake8  .gitattributes  .gitignore  Readme.md  country.tsv  dev.ipynb  pyproject.toml  requirements.txt  summaries.ipynb  tutorial.ipynb
dagster_icij/: assets.py  definitions.py
data/: dataset.spacy
data/icij-example/: aliases.jsonl  entities.jsonl  suspicious.txt
data/senzing/: aliases.jsonl  country.tsv  entities.jsonl  summaries.tsv
data/test-microsoft/: entities.jsonl
src/: analysis.py  ann_kb.py  ann_linker.py  el.py  ner.py  rel.py  scraper.py  senzing_parser.py  senzing_pipeline.py
src/ann_linker/: dag.py  kb.py  linker.py  test_ann_linker.py
